--- a/app_client/package.json
+++ b/app_client/package.json
@@ -13,7 +13,8 @@
     "bootstrap-icons": "^1.9.1",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
